css/indexstyle.css
* {
  margin: 0;
}

.page {
  min-height: 100%;
  position: relative;
}

.inner-page {
  padding: 0 0 20vh;
}

body {
  text-align: center;
  font-family: sans-serif;
  min-height: 100%;
  min-width: 100%;
}

h1 {
  margin-top: 10vh;
  margin-bottom: 5vh;
}

#welcome {
  margin-bottom: 10vh;
}

.container {
  padding-left: 10vw;
  padding-right: 10vw;
}


footer {
  position: absolute;
  bottom:0;
  left:0;
  width:100%;
  height:9vh;
  background-color: yellow;
}

.imgmenu {
  width: 100%;
  height : 40%;
  object-fit: cover;
}

.menuitem {
  padding-bottom: 10px;
  padding-top: 10px;
}

.rectangle {
  width: 100%;
  display: block;
  margin-left: auto;
  margin-right: auto;
  background-color: black;
  margin-bottom: 20px;
  color: white;
  opacity: 1;
  transition: opacity .25s ease-in-out;
}

.rectangle:hover {
    opacity: 0.6;
  }

@media screen and (max-width: 800px) {
    .col-sm {
      min-width:80vw;
    }
    .container {
      padding-left: 2vw;
      padding-right: 2vw;
    }
  }

